networking-service: bridge: ip up all member ports

--- a/roles/network-interfaces/templates/networking-service.j2
+++ b/roles/network-interfaces/templates/networking-service.j2
@@ -122,6 +122,7 @@ start)
       {% for member in bridge.members %}
     
     brctl addif {{bridge.name}} {{member}}
+    ip link set {{member}} up
 
       {% endfor %}
 
